# boinc-buda-app

./: .gitignore  CMakeLists.txt  README.md  boinc-buda-app.cpp
.github/workflows/: build.yml
